  (If you like you can still overwrite the settings for each element separatly though)

- extend the EOSTorque effect to both entering and leaving the EOS zone and add additional EOS Torque Angle to make this range configurable
  This allows for more flipper tricks without having to dial in unrealistic flipper settings

- output table information if paused

- start camera mode with 'F6'

- texture size limit/downscale now respects aspect ratio.
  Also delete outdated 512 max limit and introduce a new 3072 max limit.

- new core scripts by mfuegemann and controller modifications by arngrim (see core.vbs for changelog)

- DirectX 8 port for input handling (currently disabled)

VP 10.1.0 Changelog
------------------------

- add (tangent space-)normal mapping support to primitive

- add EOSTorque to the flipper physics settings. This value/factor effects the way how long a flipper arm stays in the up/raised position even when you released the flipper button.
  On real pinballs it will take some time until the flipper solenoid loses it's power until the flipper drops down or is forced to move by a hitting ball.

- add DefaultBulbIntensityScale also to the table ball property to scale/dampen the intensity of the bulb lights on the ball

- add abilty to show the image size in the image manager for each texture
- add an "Update All" button to the image manager for updating all images without any further inquiry.
  Only an error message is shown after updating, if some images can't be updated (e.g. files not found).

- add support to import/export backdrop POV(Point Of View) settings to a XML file. It's under File->Import->Backdrop POV or File->Export->Backdrop POV
- fix/extend support for different user-selectable physics presets and also save as XML file

- hit shape of the rubber object refined