@@ -6,6 +6,7 @@ Const VPinMAMEDriverVer = 3.51
 ' New in 3.51 (Update by mfuegemann & Arngrim)
 ' - gts1.vbs dip fix
 ' - Controller.vbs now allows to have each toy to be set to 0 (sound effect), 1 (DOF) or 2 (both)
+' - Add comments to cvpmDropTarget.CreateEvents: do not use this anymore in VP10 and above, as drop targets have an animation time nowadays
 '
 ' New in 3.50 (Update by Toxie & mfuegemann & Arngrim)
 ' - Added MAC.vbs & IronBalls.vbs & Lancelot.vbs & Antar.vbs
@@ -462,7 +463,7 @@ Dim vpmShowDips     ' Show DIPs function
 '
 ' cvpmDropTarget (create as many as needed)
 '   (Public)  .InitDrop     - initialise DropTarget bank
-'   (Public)  .CreateEvents - Create Hit events
+'   (Public)  .CreateEvents - Create Hit events           ' do not use anymore in VP10 and above, as drop targets have an animation time now
 '   (Public)  .InitSnd      - sound to use for targets
 '   (Public)  .AnyUpSw      - Set AnyUp switch
 '   (Public)  .AllDownSw    - Set all down switch
@@ -1716,7 +1717,7 @@ Class cvpmDropTarget
 		vpmSetArray mDropObj, aWalls
 	End Sub
 
-	Public Sub CreateEvents(aName)
+	Public Sub CreateEvents(aName) ' do not use anymore in VP10 and above, as drop targets have an animation time now
 		Dim ii, obj1, obj2
 		If Not vpmCheckEvent(aName, Me) Then Exit Sub
 		ii = 1
